--- a/kr/css/user-custom.css
+++ b/kr/css/user-custom.css
@@ -2001,7 +2001,7 @@
     border-top: none;
 }
 
-.article-title {
+.article-title { 
     display: flex;
     align-items: center;
     flex-wrap: wrap;
@@ -2015,8 +2015,8 @@
 }
 
 .article-icons img {
-    width: 35px;
-    height: 35px;
+    width: 38px;
+    height: 40px;
 }
 
 
@@ -2113,20 +2113,13 @@
 /* ========================================
    INFO TABLE
 ======================================== */
-.privacy-info-table {
-    width: 100%;
-    border-collapse: collapse;
-    border: 1px solid var(--krds-light-color-border-gray);
-    margin-top: var(--krds-number-4);
-}
+
 
 .privacy-info-table thead th {
     padding: var(--krds-number-4);
     background-color: var(--krds-light-color-surface-gray-subtle);
-    font-weight: var(--krds-typo-font-weight-700);
-    font-size: var(--krds-pc-font-size-body-medium);
-    text-align: center;
     border: 1px solid var(--krds-light-color-border-gray);
+    border-bottom:0;
 }
 
 .privacy-info-table tbody td {
@@ -2134,11 +2127,6 @@
     text-align: center;
     vertical-align: middle;
     border: 1px solid var(--krds-light-color-border-gray);
-    font-size: var(--krds-pc-font-size-body-medium);
-}
-
-.privacy-info-table tbody td.text-left {
-    text-align: left;
 }
 
 .contact-list {
