--- a/kr/css/user-custom.css
+++ b/kr/css/user-custom.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 @font-face {
     font-family: 'AliceDigitalLearning';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_elice@1.0/EliceDigitalBaeum-Bd.woff2') format('woff2');
