--- a/kr/css/user-custom.css
+++ b/kr/css/user-custom.css
@@ -313,6 +313,9 @@
   white-space: nowrap;
 }
 
+.utility-item.useradm_on{color:var(--krds-color-light-primary-60)};
+.utility-item.useradm_off{color:var(--krds-color-light-gray-40)};
+
 /* 2-Depth Navigation Menu */
 .depth-menu {
   background-color: var(--krds-color-light-alpha-white100); 
